crates/ars-components/src/data_display/snapshots/ars_components__data_display__skeleton__tests__skeleton_item_index_2.snap
---
source: crates/ars-components/src/data_display/skeleton.rs
expression: "snapshot_attrs(&api(Props::new()).item_attrs(2))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-index",
            ),
            String(
                "2",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "skeleton",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
