crates/ars-components/src/data_display/snapshots/ars_components__data_display__skeleton__tests__skeleton_root_default.snap
---
source: crates/ars-components/src/data_display/skeleton.rs
expression: "snapshot_attrs(&api(Props::new()).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-animated",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "skeleton",
            ),
        ),
        (
            Data(
                "ars-shape",
            ),
            String(
                "text",
            ),
        ),
        (
            Data(
                "ars-variant",
            ),
            String(
                "pulse",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Loading",
            ),
        ),
        (
            Aria(
                Busy,
            ),
            String(
                "true",
            ),
        ),
        (
            Role,
            String(
                "status",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-skeleton-gap",
            ),
            "0.5rem",
        ),
        (
            Custom(
                "ars-skeleton-line-height",
            ),
            "1rem",
        ),
    ],
}
