crates/ars-components/src/data_display/snapshots/ars_components__data_display__skeleton__tests__skeleton_root_variant_none.snap
---
source: crates/ars-components/src/data_display/skeleton.rs
expression: "snapshot_attrs(&api(Props::new().variant(Variant::None)).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "skeleton",
            ),
        ),
        (
            Data(
                "ars-shape",
            ),
            String(
                "text",
            ),
        ),
        (
            Data(
                "ars-variant",
            ),
            String(
                "none",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Loading",
            ),
        ),
        (
            Aria(
                Busy,
            ),
            String(
                "true",
            ),
        ),
        (
            Role,
            String(
                "status",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-skeleton-gap",
            ),
            "0.5rem",
        ),
        (
            Custom(
                "ars-skeleton-line-height",
            ),
            "1rem",
        ),
    ],
}
